Closed
Bug 1910861
Opened 3 months ago
Closed 3 months ago
Restore the preloading of mozavcodec.dll and mozavutil.dll in content processes
Categories
(External Software Affecting Firefox :: Other, defect)
External Software Affecting Firefox
Other
Tracking
(firefox130 fixed)
RESOLVED
FIXED
130 Branch
Tracking | Status | |
---|---|---|
firefox130 | --- | fixed |
People
(Reporter: yannis, Assigned: yannis)
References
Details
Attachments
(1 file)
As part of the investigation for bug 1905690, we can restore the preloading of mozavcodec.dll
and mozavutil.dll
in content processes (see bug 1905690 comment 19).
Assignee | ||
Comment 1•3 months ago
|
||
This patch restores previous behavior where we were preloading
mozavcodec.dll and mozavutil.dll in content processes. This will allow
us to confirm the hypothesis that this preloading would let third-party
software to discover our DLLs earlier after an update, and thereby
mitigate the later crashes from bug 1905690.
Updated•3 months ago
|
Assignee: nobody → yjuglaret
Status: NEW → ASSIGNED
Pushed by yjuglaret@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/64daa53b0471
Preload Mozilla libraries in content processes again. r=gstoll,win-reviewers
Comment 3•3 months ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 3 months ago
status-firefox130:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 130 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•