Bug 1910861 - Preload Mozilla libraries in content processes again. r=gstoll,win-reviewers

This patch restores previous behavior where we were preloading
mozavcodec.dll and mozavutil.dll in content processes. This will allow
us to confirm the hypothesis that this preloading would let third-party
software to discover our DLLs earlier after an update, and thereby
mitigate the later crashes from bug 1905690.

Differential Revision: https://phabricator.services.mozilla.com/D218186